<resources>
    <string name="app_name">MyApiTest - Willane Paiva</string>
    <string name="login_title">Login</string>
    <string name="phone_label">Telefone</string>
    <string name="code_label">Código de verificação</string>
    <string name="submit_label">Entrar</string>
    <string name="resend_code_label">Reenviar código</string>
    <string name="error_message_invalid_credentials">Dados inválidos, confira os dados inseridos</string>
    <string name="error_message_exceeded_attempts">Login indisponível, tente novamente mais tarde</string>
    <string name="error_message_other"> Falha no login, tente novamente</string>
    <string name="phone_error_empty">Campo obrigatório</string>
    <string name="phone_error_digit">Formato esperado: +5511999999999</string>
    <string name="send_code_button">Enviar código</string>
    <string name="error_no_validation">Verificação falhou, tente novamente</string>
    <string name="item_detail_save_button">Salvar</string>
    <string name="item_detail_delete_button">Deletar</string>
    <string name="item_detail_back_button">Voltar</string>
    <string name="item_detail_delete_car_success">Carro deletado com sucesso</string>
    <string name="item_detail_delete_car_error">Erro ao deletar o carro</string>
    <string name="item_detail_update_car_success">Carro atualizado com sucesso</string>
    <string name="item_detail_update_car_error">Erro ao atualizar o carro</string>
    <string name="item_detail_update_car_form_invalid">Preencha todos os campos</string>
    <string name="item_detail_load_car_error">Erro ao carregar os dados do carro</string>
    <string name="create_add_button">Criar carro</string>
    <string name="create_add_button_loading">Criando carro</string>
    <string name="create_cancel_button">Cancelar</string>
    <string name="create_licence_label">Placa do carro (ex: BRA-1234)</string>
    <string name="create_year_label">Ano do carro (ex: 2020/2020)</string>
    <string name="create_model_label">Modelo do carro (ex: HBV20 )</string>
    <string name="required_field">Campo obrigatório</string>
    <string name="create_success">Carro criado com sucesso</string>
    <string name="create_error">Erro ao cadastrar o carro</string>
    <string name="create_image_label">Imagem</string>
    <string name="create_gallery_button">Abrir galeria</string>
    <string name="create_camera_button">Abrir câmera</string>
    <string name="create_image_description">Imagem selecionada do carro</string>
    <string name="create_all_permissions_denied">Permissões necessárias para usar imagem</string>
    <string name="create_permisson_camera">Câmera</string>
    <string name="create_permission_storage">Armazenamento interno</string>
    <string name="create_permission_gallery">Galeria de fotos</string>
    <string name="create_permission_denied">%1$s permissão negada</string>
    <string name="create_failed_load_image">Falha no upload da imagem, tente novamente</string>
    <string name="item_detail_model_hint">Honda</string>
    <string name="item_detail_year_hint">2019/2019</string>
    <string name="item_detail_licence_hint">ABC-1234</string>
    <string name="unknown_error">Erro desconhecido</string>
    <string name="error_request_location_permission">Erro ao pegar permissão de localização</string>
</resources>