<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16sp"
    tools:context=".DetailActivity">

    <ImageView
        android:id="@+id/image"
        android:layout_width="100dp"
        android:layout_height="100dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/model"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16sp"
        android:hint="@string/item_detail_model_hint"
        android:importantForAutofill="no"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image" />

    <EditText
        android:id="@+id/year"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16sp"
        android:hint="@string/item_detail_year_hint"
        android:importantForAutofill="no"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/model" />

    <TextView
        android:id="@+id/license"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16sp"
        android:importantForAutofill="no"
        android:text="@string/item_detail_licence_hint"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/year" />

    <!--     Map here  -->

    <LinearLayout
        style="?android:attr/buttonBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/license">

        <Button
            android:id="@+id/saveButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="12sp"
            android:layout_weight="1"
            android:drawableStart="@drawable/ic_save"
            android:drawablePadding="4sp"
            android:text="@string/item_detail_save_button"
            android:textAllCaps="false"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/deleteButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableStart="@drawable/ic_delete"
            android:drawablePadding="4sp"
            android:text="@string/item_detail_delete_button"
            android:textAllCaps="false"
            tools:ignore="ButtonStyle" />

    </LinearLayout>

    <Button
        android:id="@+id/backButton"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/item_detail_back_button"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>