<?xml version="1.0" encoding="utf-8"?>


<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16sp"
    tools:context=".LoginActivity">

    <TextView
        android:id="@+id/loginTitle"
        style="@style/TextAppearance.AppCompat.Title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_title"
        android:textAlignment="center"
        android:textColor="@color/purple_200"
        android:textSize="24sp"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="16dp" />

    <TextView
        android:id="@+id/loginPhoneLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30sp"
        android:layout_marginBottom="8sp"
        android:labelFor="@id/loginPhone"
        android:text="@string/phone_label"
        app:layout_constraintTop_toBottomOf="@+id/loginTitle" />

    <EditText
        android:id="@+id/loginPhone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:importantForAutofill="no"
        android:inputType="phone"
        app:layout_constraintTop_toBottomOf="@+id/loginPhoneLabel"
        />

    <TextView
        android:id="@+id/loginCodeLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16sp"
        android:layout_marginBottom="8sp"
        android:labelFor="@id/loginCode"
        android:text="@string/code_label"
        app:layout_constraintTop_toBottomOf="@+id/loginPhone" />

    <EditText
        android:id="@+id/loginCode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:importantForAutofill="no"
        android:inputType="number"
        app:layout_constraintTop_toBottomOf="@+id/loginCodeLabel"
        />

    <Button
        android:id="@+id/submitButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30sp"
        android:backgroundTint="@color/purple_200"
        android:text="@string/submit_label"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@+id/loginCode" />

</androidx.constraintlayout.widget.ConstraintLayout>