<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16sp"
    tools:context=".CreateActivity">

    <TextView
        android:id="@+id/model_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:labelFor="@+id/model"
        android:paddingStart="4sp"
        android:paddingEnd="4sp"
        android:text="@string/create_model_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/model"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:importantForAutofill="no"
        android:inputType="text"
        android:paddingBottom="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/model_label" />


    <TextView
        android:id="@+id/year_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:labelFor="@+id/year"
        android:paddingStart="4sp"
        android:paddingEnd="4sp"
        android:text="@string/create_year_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/model" />

    <EditText
        android:id="@+id/year"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:importantForAutofill="no"
        android:inputType="text"
        android:paddingBottom="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/year_label" />

    <TextView
        android:id="@+id/licence_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:labelFor="@+id/licence"
        android:paddingStart="4sp"
        android:paddingTop="8sp"
        android:paddingEnd="4sp"
        android:text="@string/create_licence_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/year" />

    <EditText
        android:id="@+id/licence"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:importantForAutofill="no"
        android:inputType="text"
        android:paddingBottom="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/licence_label" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/licence">

        <Button
            android:id="@+id/addButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="12sp"
            android:layout_weight="1"
            android:drawableStart="@drawable/ic_add"
            android:drawablePadding="4sp"
            android:text="@string/create_add_button"
            android:textAllCaps="false"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/CancelButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableStart="@drawable/ic_cancel"
            android:drawablePadding="4sp"
            android:text="@string/create_cancel_button"
            android:textAllCaps="false"
            tools:ignore="ButtonStyle" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>